Working fixes